# jucipp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
ci/: compile.sh  execute.sh  static_analysis.sh  update_ci.sh
docs/: apidoc.md  install.md
plugins/: snippet.py  tools.py
src/: CMakeLists.txt  api.cc  api.h  asm.cc  asm.h  config.cc  config.h  directories.h  doc.h  files.h  juci.cc  juci.h  main.cc  menu.cc  menu.h  notebook.cc  notebook.h  project.cc  project.h  python.cc  python.h  python_api.cc  python_api.h  python_interpreter.cc  python_interpreter.h  pythoncpp.cc  pythoncpp.h  singletons.cc  singletons.h  source_python.cc  source_python.h  terminal.cc  terminal.h  test.py  window.cc  window.h
tests/: lldb_test.cc
